--- a/constraint-layout-start/app/src/main/res/layout/activity_main_barriers.xml
+++ b/constraint-layout-start/app/src/main/res/layout/activity_main_barriers.xml
@@ -41,8 +41,8 @@
         android:id="@+id/favorite"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/info_background"
         android:contentDescription="@string/placeholder"
         android:padding="5dp"
@@ -84,30 +84,31 @@
     <TextView
         android:id="@+id/settingsLabel"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
         android:labelFor="@+id/settings"
         android:text="@string/settings"
         app:layout_constraintBaseline_creator="1"
         app:layout_constraintBaseline_toBaselineOf="@+id/settings"
+        app:layout_constraintEnd_toStartOf="@+id/settings"
         app:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="@+id/activity_main_barriers"
         app:layout_editor_absoluteX="16dp"
         app:layout_editor_absoluteY="238dp"
         tools:layout_constraintBaseline_creator="0"
-        tools:layout_constraintLeft_creator="0"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="238dp" />
+        tools:layout_constraintLeft_creator="0" />
 
     <TextView
         android:id="@+id/cameraLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginEnd="8dp"
         android:labelFor="@+id/cameraType"
         android:text="@string/camera"
         app:layout_constraintBaseline_creator="1"
         app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
+        app:layout_constraintEnd_toStartOf="@+id/cameraType"
         app:layout_constraintLeft_creator="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_editor_absoluteX="16dp"
@@ -137,19 +138,24 @@
         android:id="@+id/cameraType"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/camera_value"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cameraLabel"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_editor_absoluteX="73dp"
         app:layout_editor_absoluteY="176dp"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="0" />
+
+    <android.support.constraint.Barrier
+        android:id="@+id/barrier5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="end"
+        app:constraint_referenced_ids="cameraLabel,settingsLabel" />
 
 </android.support.constraint.ConstraintLayout>
